@@ -16,6 +16,7 @@
 
 package com.rackspace.salus.monitor_management.web.controller;
 
+import static com.rackspace.salus.common.util.SpringResourceUtils.readContent;
 import static com.rackspace.salus.test.WebTestUtils.validationError;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.Matchers.equalTo;
@@ -33,10 +34,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.request;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-import static com.rackspace.salus.common.util.SpringResourceUtils.readContent;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.rackspace.salus.telemetry.entities.Zone;
 import com.rackspace.salus.monitor_management.errors.DeletionNotAllowedException;
 import com.rackspace.salus.monitor_management.services.MonitorManagement;
 import com.rackspace.salus.monitor_management.services.ZoneManagement;
@@ -44,10 +43,11 @@ import com.rackspace.salus.monitor_management.web.model.ZoneAssignmentCount;
 import com.rackspace.salus.monitor_management.web.model.ZoneCreatePrivate;
 import com.rackspace.salus.monitor_management.web.model.ZoneCreatePublic;
 import com.rackspace.salus.monitor_management.web.model.ZoneDTO;
-import com.rackspace.salus.telemetry.etcd.services.ZoneStorage;
-import com.rackspace.salus.telemetry.model.ZoneState;
+import com.rackspace.salus.telemetry.entities.Zone;
 import com.rackspace.salus.telemetry.errors.AlreadyExistsException;
+import com.rackspace.salus.telemetry.etcd.services.ZoneStorage;
 import com.rackspace.salus.telemetry.etcd.types.ResolvedZone;
+import com.rackspace.salus.telemetry.model.ZoneState;
 import com.rackspace.salus.telemetry.repositories.TenantMetadataRepository;
 import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
 import java.nio.charset.StandardCharsets;
@@ -56,12 +56,12 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import org.apache.commons.lang3.RandomStringUtils;
-import org.hamcrest.Matchers;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -517,8 +517,9 @@ public class ZoneApiControllerTest {
         when(zoneManagement.exists(any(), any()))
             .thenReturn(true);
 
-        List<ZoneAssignmentCount> expected = Collections.singletonList(
-            new ZoneAssignmentCount().setResourceId("r-1").setEnvoyId("e-1").setAssignments(3)
+        List<ZoneAssignmentCount> expected = List.of(
+            new ZoneAssignmentCount().setResourceId("r-1").setEnvoyId("e-1").setAssignments(3).setConnected(true),
+            new ZoneAssignmentCount().setResourceId("r-2").setEnvoyId("e-2").setAssignments(1).setConnected(false)
         );
 
         when(monitorManagement.getZoneAssignmentCounts(any(), any()))
@@ -613,8 +614,9 @@ public class ZoneApiControllerTest {
         when(zoneManagement.publicZoneExists(any()))
             .thenReturn(true);
 
-        List<ZoneAssignmentCount> expected = Collections.singletonList(
-            new ZoneAssignmentCount().setResourceId("r-1").setEnvoyId("e-1").setAssignments(3)
+        List<ZoneAssignmentCount> expected = List.of(
+            new ZoneAssignmentCount().setResourceId("r-1").setEnvoyId("e-1").setAssignments(3).setConnected(true),
+            new ZoneAssignmentCount().setResourceId("r-2").setEnvoyId("e-2").setAssignments(1).setConnected(false)
         );
 
         when(monitorManagement.getZoneAssignmentCounts(any(), any()))
@@ -748,61 +750,69 @@ public class ZoneApiControllerTest {
     }
 
     @Test
-    public void testGetExpiredPollerPublicZone() throws Exception {
+    public void getPrivateZoneAssignmentCountsPerTenant() throws Exception {
 
-        when(zoneStorage.getExpiredPollerResourceIdsInZone(any()))
-            .thenReturn(CompletableFuture.completedFuture(List.of("r-1", "r-2")));
+        Map<String, List<ZoneAssignmentCount>> expected = Map.of("z-1", Collections.singletonList(
+            new ZoneAssignmentCount().setResourceId("r-1").setEnvoyId("e-1").setAssignments(3)
+                .setConnected(true)),
+            "z-2", Collections.singletonList(
+                new ZoneAssignmentCount().setResourceId("r-2").setEnvoyId("e-2").setAssignments(1)
+                    .setConnected(false)),
+            "z-3", Collections.emptyList());
 
-        ResolvedZone resolvedZone = ResolvedZone.createPublicZone("public/testPublicZone");
+        when(monitorManagement.getZoneAssignmentCountForTenant(any()))
+            .thenReturn(CompletableFuture.completedFuture(expected));
+
+        final String zoneName = RandomStringUtils.randomAlphanumeric(10);
         final MvcResult result = mvc.perform(
-            get("/api/admin/detached-pollers/{name}",
-                "public/testPublicZone"
-            )
-        )
+            get("/api/tenant/{tenantId}/zone-assignment-counts", "t-1"))
+            // CompletableFuture return value, so the request is asynchronous
             .andExpect(request().asyncStarted())
             .andReturn();
 
         mvc.perform(asyncDispatch(result))
             .andExpect(status().isOk())
-            .andExpect(jsonPath("*").value(Matchers.containsInAnyOrder("r-1", "r-2")));
+            .andExpect(content()
+                .contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
+            .andExpect(content().json(
+                readContent("ZoneApiControllerTest/privateZoneAssignmentCountPerTenant_valid.json"),
+                true));
 
-        verify(zoneStorage).getExpiredPollerResourceIdsInZone(resolvedZone);
+        verify(monitorManagement).getZoneAssignmentCountForTenant("t-1");
+
+        verifyNoMoreInteractions(zoneManagement, monitorManagement);
     }
 
     @Test
-    public void testGetExpiredPollerPrivateZone() throws Exception {
+    public void getPublicZoneAssignmentCountsPerTenant() throws Exception {
 
-        when(zoneStorage.getExpiredPollerResourceIdsInZone(any()))
-            .thenReturn(CompletableFuture.completedFuture(List.of("r-1", "r-2")));
+        Map<String, List<ZoneAssignmentCount>> expected = Map.of("public/west", Collections.singletonList(
+            new ZoneAssignmentCount().setResourceId("r-1").setEnvoyId("e-1").setAssignments(3)
+                .setConnected(true)),
+            "public/east", Collections.singletonList(
+                new ZoneAssignmentCount().setResourceId("r-2").setEnvoyId("e-2").setAssignments(1)
+                    .setConnected(false)),
+            "public/north", Collections.emptyList());
 
-        ResolvedZone resolvedZone = ResolvedZone.createPrivateZone("t-1", "testZone");
+        when(monitorManagement.getZoneAssignmentCountForTenant(any()))
+            .thenReturn(CompletableFuture.completedFuture(expected));
 
         final MvcResult result = mvc.perform(
-            get("/api/tenant/{tenantId}/detached-pollers/{zone}",
-                "t-1", "testZone"
-            )
-        )
+            get("/api/admin/zone-assignment-counts"))
+            // CompletableFuture return value, so the request is asynchronous
             .andExpect(request().asyncStarted())
             .andReturn();
 
         mvc.perform(asyncDispatch(result))
             .andExpect(status().isOk())
-            .andExpect(jsonPath("*").value(Matchers.containsInAnyOrder("r-1", "r-2")));
+            .andExpect(content()
+                .contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
+            .andExpect(content().json(
+                readContent("ZoneApiControllerTest/publicZoneAssignmentCountPerTenant_valid.json"),
+                true));
 
-        verify(zoneStorage).getExpiredPollerResourceIdsInZone(resolvedZone);
+        verify(monitorManagement).getZoneAssignmentCountForTenant(ResolvedZone.PUBLIC);
 
-        final MvcResult res = mvc.perform(
-            get("/api/tenant/{tenantId}/detached-pollers",
-                "t-1"
-            )
-        )
-            .andExpect(request().asyncStarted())
-            .andReturn();
-
-        mvc.perform(asyncDispatch(res))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("*").value(Matchers.containsInAnyOrder("r-1", "r-2")));
-
-        verify(zoneStorage).getExpiredPollerResourceIdsInZone(resolvedZone);
+        verifyNoMoreInteractions(zoneManagement, monitorManagement);
     }
 }
